# python-packaging-in-2023-demo

./: README.md  pyproject.toml
awesome_package/: __init__.py
