[project]
name = "random-name-nobody-will-ever-use-23"
version = "0.2.0"
description = "My awesome test package"
authors = [
    { name = "GwynBleidD", email = "gwynbleidd@pykonik.org" },
]
license = {text="GPL"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.23.0,==2.*.*",
]

[project.optional-dependencies]
async = [
    "aiohttp>=3.8.3,==3.*.*",
]

[tool.flit.module]
name = "awesome_package"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
