[project]
name = "random-name-nobody-will-ever-use-23"
# version = "0.2.0"
description = "My awesome test package"
authors = [
    { name = "GwynBleidD", email = "gwynbleidd@pykonik.org" },
]
license = {text="GPL"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests~=2.23.0",
]

dynamic = ["version"]

[project.optional-dependencies]
async = [
    "aiohttp~=3.8.3",
]

[tool.setuptools_scm]

[build-system]
requires = ["setuptools", "wheel", "setuptools-scm>=6.2"]
build-backend = "setuptools.build_meta"
