[tool.poetry]
name = "random-name-nobody-will-ever-use-23"
version = "0.0.0"
description = "My awesome test package"
authors = ["GwynBleidD <gwynbleidd@pykonik.org>"]
license = "GPL"
readme = "README.md"
packages = [{include = "awesome_package"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.23.0"
aiohttp = { version = "^3.8.3", optional = true }

[tool.poetry.extras]
async = ["aiohttp"]

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[tool.poetry-dynamic-versioning]
enable = true

[build-system]
requires = ["poetry-core", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
